--- a/wp-content/themes/anomeo/assets/scss/_base.scss
+++ b/wp-content/themes/anomeo/assets/scss/_base.scss
@@ -11,8 +11,14 @@
 
         --ak-main-spacing: 37px;
         --ak-header-height: 70px;
-    
     }
+
+    @include media-breakpoint-up(xxl) {
+
+        --ak-main-spacing: 140px;
+    }
+
+
 }
 
 ::selection {
