--- a/wp-content/themes/anomeo/assets/scss/_account.scss
+++ b/wp-content/themes/anomeo/assets/scss/_account.scss
@@ -261,6 +261,11 @@ input, .select2{
         width: 100%!important;
         padding: 12px 34px;
     }
+
+    @include media-breakpoint-up(xxl) {
+        padding: 21px 34px;
+        font-size: 20px;
+    }
     
     &::placeholder{
         color: #148D9A;
