--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -201,6 +201,8 @@
         line-height: 1;
         text-transform: none;
 
+        transition: all .3s;
+
         @include media-breakpoint-up(xl) {
             font-size: 18px;
         }
@@ -210,6 +212,12 @@
         }
 
 
+    }
+
+    .menu-item a{
+        &:hover{
+            color: #F89D3F;
+        }
     }
 
     .icon-menu-item {
@@ -693,6 +701,8 @@
         transform: translateX(100%);
         transition: all 450ms;
 
+        z-index: 999999;
+
         @include media-breakpoint-up(sm) {
             top: 0;
             height: 100vh;
@@ -726,6 +736,10 @@
 
                 @include media-breakpoint-up(xl) {
                     font-size: 20px;
+                }
+
+                @include media-breakpoint-up(xxl) {
+                    height: 140px;
                 }
 
                 .count {
@@ -994,6 +1008,11 @@
             padding: 45px var(--ak-main-spacing) 20px;
         }
 
+        @include media-breakpoint-up(xxl) {
+            padding-right: 0;
+            top: calc(var(--ak-header-height) + 39px);
+        }
+
         visibility: hidden;
         opacity: 0;
         transform: translateY(-10%);
@@ -1019,6 +1038,12 @@
                 a {
                     color: #F89D3F;
                     font-family: 'Din Pro Bold';
+
+                    transition: all .3s;
+
+                    &:hover{
+                        color: #138997;
+                    }
                 }
 
             }
@@ -1516,6 +1541,12 @@
         text-decoration: none;
         font-family: 'Din Pro Bold';
         text-transform: uppercase;
+
+        transition: all .3s;
+
+        &:hover{
+            background-color: #138997;
+        }
 
     }
 
@@ -2948,6 +2979,10 @@
             height: 566px;
         }
 
+        @include media-breakpoint-up(xxl) {
+            height: 100vh;
+        }
+
         &__item {
             position: relative;
             height: 0 !important;
@@ -3065,6 +3100,7 @@
 
             @include media-breakpoint-up(xxl) {
                 padding-right: 0!important;
+                padding-top: 120px!important;
             }
 
             .title {
@@ -4294,6 +4330,11 @@
         padding: 16px var(--ak-main-spacing);
 
         outline: none !important;
+
+        
+        @include media-breakpoint-up(xl) {
+            padding: 16px 30px;
+        }
 
 
 
@@ -5855,7 +5896,10 @@
             padding-bottom: 23px;
             padding-left: var(--ak-main-spacing);
             border-top: 1px solid #EAEAEA;
+        }
 
+        @include media-breakpoint-up(xxl) {
+            padding-top: 98px;
         }
 
         label {
@@ -6624,6 +6668,13 @@
         @include media-breakpoint-up(xxl) {
             font-size: 20px;
         }
+        a{
+            transition: all .3s;
+            &:hover{
+                color: #88DCDF;
+            }
+        }
+        
     }
 }
 
@@ -6958,6 +7009,10 @@
             width: 100%;
         }
 
+        @include media-breakpoint-up(xxl) {
+            padding-top: 80px;
+        }
+
         .page-title__container {
             padding-bottom: 130px;
             padding-top: 36px;
@@ -7003,6 +7058,11 @@
         background-color: #F2F8F9;
         padding: 43px var(--ak-main-spacing) 0;
         padding-top: 63px;
+
+        @include media-breakpoint-up(xxl) {
+            padding-top: 120px;
+            height: 100vh;
+        }
 
         @include media-breakpoint-down(sm) {
             width: 100%;
@@ -7074,6 +7134,10 @@
         @include media-breakpoint-down(sm) {
             width: 100%;
             padding: 0 34px;
+        }
+
+        @include media-breakpoint-up(xxl) {
+            height: 100vh;
         }
     }
 
@@ -7181,6 +7245,10 @@
 
             @include media-breakpoint-down(sm) {
                 margin-bottom: 44px;
+            }
+
+            @include media-breakpoint-up(xxl) {
+                padding: 16px 30px;
             }
 
             &#password {
@@ -7573,7 +7641,11 @@
 }
 
 .thank-you {
-    margin: 22px 38px 470px;
+    padding: 22px 38px 470px;
+    @include media-breakpoint-up(xxl) {
+        padding: 80px var(--ak-main-spacing);
+
+    }
 
     .title {
         color: #128796;
@@ -7637,6 +7709,9 @@
 
         @include media-breakpoint-down(sm) {
             margin-bottom: 32px;
+        }
+        @include media-breakpoint-up(xxl) {
+            width: 45%;
         }
 
         img {
@@ -7824,7 +7899,7 @@
         font-size: 16px;
         color: #6C6D6E;
         padding: 22px 0;
-
+        position: relative;
         margin-bottom: 0;
         cursor: pointer;
 
@@ -7844,6 +7919,7 @@
                 background-size: 20px 20px;
                 width: 20px;
                 height: 20px;
+                top: 35%;
             }
         }
 
@@ -7871,6 +7947,10 @@
 
     @include media-breakpoint-down(sm) {
         padding-left: 0;
+    }
+
+    @include media-breakpoint-up(xxl) {
+        padding-top: 80px;
     }
 }
 
@@ -7925,6 +8005,9 @@
 .find-us {
     padding-left: var(--ak-main-spacing);
 
+    @include media-breakpoint-up(xxl) {
+       padding-top: 80px;
+    }
 }
 
 .find_us-title {
@@ -8018,6 +8101,10 @@
         margin-bottom: 22px;
     }
 
+    @include media-breakpoint-up(xxl) {
+        padding: 60px var(--ak-main-spacing) 0;
+    }
+
     .title {
         color: #128796;
         font-size: 36px;
@@ -8034,6 +8121,11 @@
     @include media-breakpoint-down(sm) {
         padding: 0 var(--ak-main-spacing);
         width: 100%;
+    }
+
+    @include media-breakpoint-up(xxl) {
+        padding-left: var(--ak-main-spacing);
+        width: 35%;
     }
 
     p {
@@ -8246,6 +8338,10 @@
             width: 100%!important;
             padding: 12px 34px;
         }
+
+        @include media-breakpoint-up(xxl) {
+            padding: 27px 34px;
+        }
     }
 
 
@@ -8297,7 +8393,7 @@
         position: fixed;
         z-index: 9;
         right: 70px;
-        top: 135px;
+        top: 145px;
 
         color: #138997;
         background-color: #fff;
@@ -8334,6 +8430,7 @@
 
             @include media-breakpoint-up(xxl) {
                 width: 175px;
+                top: 130px;
             }
         }
     }
@@ -8643,6 +8740,10 @@
         height: 566px;
     }
 
+    @include media-breakpoint-up(xxl) {
+        height: 100vh;
+    }
+
     object-fit: cover;
 }
 
@@ -8652,6 +8753,10 @@
     @include media-breakpoint-down(sm) {
         height: 566px;
     }
+
+    @include media-breakpoint-up(xxl) {
+        height: 100vh;
+    }
 }
 
 .slick-list.draggable {
@@ -8659,6 +8764,10 @@
 
     @include media-breakpoint-down(sm) {
         height: 566px;
+    }
+
+    @include media-breakpoint-up(xxl) {
+        height: 100vh;
     }
 }
 
@@ -8691,6 +8800,16 @@
         @include media-breakpoint-down(sm) {
             display: none;
         }
+
+        @include media-breakpoint-up(xxl) {
+           padding-left: var(--ak-main-spacing);
+        }
+    }
+
+    .ak-products__grid{
+        @include media-breakpoint-up(xxl) {
+            padding-left: var(--ak-main-spacing);
+         }
     }
 
     .ak-products__grid--4-cols {
@@ -8835,6 +8954,10 @@
 
 .order_view {
     padding-top: 44px;
+
+    @include media-breakpoint-up(xxl) {
+        padding-top: 120px;
+    }
 
 
     .back {
@@ -9392,6 +9515,9 @@
         top: auto;
         bottom: 37px;
     }
+    @include media-breakpoint-up(xxl) {
+        right: -60px;
+    }
 }
 
 .slick-active .iconic-woothumbs-all-images-wrap .slick-dots button, .iconic-woothumbs-zoom-bullets .slick-dots button{
@@ -9409,6 +9535,11 @@
     width: 12px;
     height: 12px;
     cursor: pointer;
+
+    @include media-breakpoint-up(xxl) {
+        width: 17px;
+        height: 17px;
+    }
 }
 
 .more-description{
@@ -9538,6 +9669,40 @@
             top: 73%;
             left: 43%;
         }
+    }
+}
+
+.home-top{
+
+    .color_bg.orange {
+        @include media-breakpoint-up(xxl) {
+            padding: 20px 31px;
+            margin-top: 20px;
+            margin-left: 25px;
+        }
+    }
+}
+
+.newsletter-popup{
+    input:focus{
+        border-color: #138997;
+    }
+}
+
+.woocommerce-account{
+    .page__content-section{
+        .r-wrap{
+            @include media-breakpoint-up(xxl) {
+                padding-left: 0;
+            }
+        }
+    }
+}
+
+.iconic-woothumbs-all-images-wrap .slick-dots li, .iconic-woothumbs-zoom-bullets .slick-dots li{
+    @include media-breakpoint-up(xxl) {
+        width: 30px;
+        height: 30px;
     }
 }
 
